[tool.poetry]
name = "my-openai-plugin"
version = "0.1.0"
description = "a demo implementation of the OpenAI Plugin"
authors = ["kutakutat <18190905+kutakutat@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.18.4"
quart-cors = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
